--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "select name based on number of items requested + random",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
